# GazeEstimator

./: .gitignore  CMakeLists.txt  README.md  gaze_estimator.cpp  normalizer.cpp
content/calib/: calibration.yml  monitor_desktop.yml  monitor_laptop.yml
include/: data.hpp  normalizer.hpp
